// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsPage should not render statistics because there is no filter 1`] = `""`;

exports[`StatsPage should render "Overview" statistics 1`] = `<StatsComponent />`;

exports[`StatsPage should render "Revenue" statistics 1`] = `<Component />`;

exports[`StatsPage should render "Satisfaction" statistics 1`] = `<Component />`;

exports[`StatsPage should restrict access to revenue stats because the account doesn't have a store integration 1`] = `
<RestrictedFeature
  alertMsg={
    <React.Fragment>
      Your e-commerce store needs to be connected to Gorgias to use this feature.
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/app/settings/integrations/shopify/new"
      >
         
        Add one here
      </Link>
    </React.Fragment>
  }
  imagesURL={
    Array [
      "/static/private/img/presentationals/revenue-presentation.png",
    ]
  }
  info="Assess how much sales your support team is influencing. Staff and reward your support team according to sales. Track and increase conversion, using Chat campaigns, for example."
/>
`;

exports[`StatsPage testing default filters should ensure that the filters contain a store integration when possible 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Immutable.Map {
        "period": Immutable.Map {
          "start_datetime": "2019-08-28T00:00:00-07:00",
          "end_datetime": "2019-09-03T23:59:59-07:00",
        },
        "integrations": Immutable.List [
          1,
        ],
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`StatsPage testing default filters should ensure the default value 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Immutable.Map {
        "period": Immutable.Map {
          "start_datetime": "2019-08-28T00:00:00-07:00",
          "end_datetime": "2019-09-03T23:59:59-07:00",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
